[package]
name = "secretariado"
version = "0.1.0"
authors = ["Irving Morales <irvingfisica@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"